@@ -1,38 +1,65 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
- * User Manual available at https://docs.gradle.org/7.4/userguide/building_java_projects.html
- * This project uses @Incubating APIs which are subject to change.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    // This dependency is used by the application.
+    // app
+    implementation 'com.nulab-inc:backlog4j:2.4.4'
+    implementation 'com.typesafe:config:1.4.2'
+    implementation 'info.picocli:picocli:4.6.3'
+    implementation 'org.kohsuke:github-api:1.303'
+
+    // logging
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+
+    // build
     implementation 'com.google.guava:guava:30.1.1-jre'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    // testing
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+    // mock
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
 }
 
 testing {
     suites {
-        // Configure the built-in test suite
         test {
-            // Use JUnit Jupiter test framework
             useJUnitJupiter('5.8.1')
         }
     }
 }
 
 application {
-    // Define the main class for the application.
-    mainClass = 'jp.kazamori.github.actions.backlog.App'
+    mainClass = 'jp.kazamori.github.actions.backlog.Main'
+}
+
+task githubClient(type: JavaExec) {
+    mainClass = 'jp.kazamori.github.actions.backlog.cli.GitHubClientCli'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task backlogClient(type: JavaExec) {
+    mainClass = 'jp.kazamori.github.actions.backlog.cli.BacklogClientCli'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task config(type: JavaExec) {
+    mainClass = 'jp.kazamori.github.actions.backlog.cli.ConfigCli'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/sun.net.www.protocol.https=ALL-UNNAMED'
+    jvmArgs += '--add-opens'
+    jvmArgs += 'java.base/java.net=ALL-UNNAMED'
 }
